--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -24,5 +24,11 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
+        
+= form_tag :action => 'search_tmdb' do
+
+  %label{:for => 'search_terms'} Search Terms
+  = text_field_tag 'search_terms'
+  = submit_tag 'Search TMDb'
 
 = link_to 'Add new movie', new_movie_path
